# Enterprise-Revenue-Intelligence-Platform

./: .gitignore  main.py  project_structure.txt  pyproject.toml  requirements.txt
config/: database.yaml  logging.yaml  pipeline.yaml  quality.yaml
docs/: Engineering Standards.docx  data_dictionary.xlsx  data_quality_findings.md  ~$gineering Standards.docx
scripts/: test_config.py  test_database.py  test_logger.py
sql/seeds/: seed_reference_data.sql
src/config/: config.py
src/core/: platform.py  services.py
src/database/: __init__.py  connection.py  database_executor.py  health.py
src/extract/: load_raw_data.py
src/load/: base_loader.py  load_customer.py  load_geolocation.py  load_order_items.py  load_order_payments.py  load_order_reviews.py  load_orders.py  load_product.py  load_product_category_translation.py  load_seller.py  load_staging.py
src/observability/: __init__.py  formatter.py  logger.py  memory.py  summary.py  timer.py
src/orchestration/: execution_context.py  pipeline.py  register_stages.py  stage.py  stage_registry.py  stage_result.py
src/semantic/: manager.py  registry.py  validator.py
src/utils/: audit.py  database.py  loader.py  logger.py  memory.py  timer.py  validation.py
src/warehouse/: __init__.py  executor.py  manager.py  registry.py  validator.py
tests/: test_observability.py
validation/: __init__.py  base.py  models.py  runner.py  test_constraints.py  test_database.py  test_indexes.py  test_metadata.py  test_reference_data.py  test_schemas.py  test_staging_tables.py  test_warehouse.py
(+49 files in other folders)
